2006-10-11  Stan Cox  <scox@redhat.com>

	* DwarfDie.java (getFormData): New.
	* cni/DwarfDie.cxx (get_formdata): New.

2006-10-09  Adam Jocksch  <ajocksch@redhat.com>

	* DwflLine.java: Reformatted.
	(getCompilationDir): Added.
	* cni/DwflLine.cxx (dwfl_linecomp_dir): Added.

2006-10-04  Mike Cvet  <mcvet@redhat.com>

	* Dwfl.java (getSourceLine): Added try/catch around dwfl call.

2006-10-02  Stan Cox  <scox@redhat.com>

	* cni/DwarfDie.cxx (get_scopevar): Check for DW_TAG_variable.

2006-09-29  Stan Cox  <scox@redhat.com>

	* DwarfDie.java (getFrameBase): Simplify DW_AT_frame_base handling.
	* cni/DwarfDie.cxx (get_framebase): Likewise.

2006-09-19  Mark Wielaard  <mark@klomp.org>

	* tests/cni/TestLib.cxx (getFuncAddr): Extract define out of
	function and put whole definition on one line.
	* tests/TestDwfl.java (testGetLine): Use same line number for all
	architectures.

2006-09-19  Yao Qi  <qiyaoltc@cn.ibm.com>

	* tests/TestDwfl.java (testGetLine): Skip it when build on X86_64.
	Change the line number result for powerpc64.

2006-09-18  Adam Jocksch  <ajocksch@redhat.com>

	* DwarfDie.java (isInlinedFunction): New.
	(is_inline_func): New.
	* cni/DwarfDie.cxx (is_inline_func): New.
	* tests/TestDwfl.java (testGetDie): Added commented out line to test
	isInlinedFunction, do not want to enable this right now until we
	are sure it does not break the build.

2006-09-18  Stan Cox  <scox@redhat.com>

	* DwarfDie.cxx (getScopeVar): Use JvGetStringUTFRegion.

2006-09-12  Stan Cox  <scox@redhat.com>

	* DwarfDie.java (getScopeVar): New.
	(getScope): New.
	(getDeclFile): New.
	(getDeclLine): New.
	(getAddr): New.
	(getType): New.
	(fbregVariable): New.
	(getFrameBase): New.
	* cni/DwarfDie.cxx (get_scopevar): New.
	(get_decl_file): New.
	(get_decl_line): New.
	(get_addr): New.
	(get_type): New.
	(fbreg_variable): New.
	(get_framebase): New.

2006-08-28  Andrew Cagney  <cagney@redhat.com>

	* tests/TestDwfl.java: Extend frysk.junit.TestCase.